--- a/public/sapiensia.html
+++ b/public/sapiensia.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 
-<body style="margin: 0; background-image: url('https://raw.githubusercontent.com/Vortextech01/odyssey-theme/main/theme/public/1E36003B-FB73-44FA-93B0-252AD5FC9780.jpeg'); background-size: cover;">
+<body style="margin: 0; background-image: url('https://raw.githubusercontent.com/Vortextech01/docs/main/public/images/docs/8EA05FEF-B2B8-4ED5-84FD-CE32EC7C10A9.jpeg'); background-size: cover;">
   <div id="chat-container">
     <script type="module">
       import Chatbot from "https://cdn.jsdelivr.net/gh/Vortextech01/FlowiseChatEmbed/dist/web.js"
@@ -49,7 +49,7 @@
               backgroundColor: "black",
               textColor: "white",
               showAvatar: true,
-              avatarSrc: "https://raw.githubusercontent.com/Vortextech01/odyssey-theme/main/theme/public/9C8F797B-850D-431D-8219-A677B28C6EEC.png",
+              avatarSrc: "https://raw.githubusercontent.com/Vortextech01/docs/main/public/images/docs/53FE6725-DD79-4664-9CFB-81427E82AF5A.jpeg",
             },
             userMessage: {
               backgroundColor: "white",
